# Messenger

./: README.md  commit
backend/: .env  .env.template  Cargo.toml  README.md
backend/migrations/2021-10-17-130746_create_messages/: up.sql
backend/migrations/2021-10-17-131344_create_users/: up.sql
backend/migrations/2021-10-17-163348_message_table/: down.sql  up.sql
backend/src/: error.rs  lib.rs  main.rs  models.rs  schema.rs
backend/src/auth/: mod.rs
frontend/: package.json
frontend/src/: App.vue
frontend/src/components/: ChatBox.vue  Message.vue  RegisterDialog.vue
frontend/src/core/: Firebase.ts
