[package]
name = "backend"
version = "0.1.0"
edition = "2021"
default-run = "backend"

[lib]
name = "backlib"
path = "src/lib.rs"

[[bin]]
name = "backend"
path = "src/main.rs"

[[bin]]
name = "newuser"
path = "src/bin/new_user.rs"

[dependencies]
diesel = { version = "1.4.8", features = ["postgres"] }
tokio = { version = "1", features = ["full"] }
warp = "0.3.1"
dotenv = "0.15.0"
sha256 = "1.0.2"
